# opspawn-development

./: .gitignore  .gitmodules  PLANNING.md  PLANNING_step_7.2.1.md  PLANNING_step_7.2.10_direct_worker_test.md  PLANNING_step_7.2.11_fresh_session_test.md  PLANNING_step_7.2.12_failure_test_status_debug.md  PLANNING_step_7.2.13_manual_worker_debug.md  PLANNING_step_7.2.2_rabbitmq_debug.md  PLANNING_step_7.2.3_manual_debug.md  PLANNING_step_7.2.4_clean_env_test.md  PLANNING_step_7.2.5_subprocess_debug.md  PLANNING_step_7.2.6_cli_debug.md  PLANNING_step_7.2.7_revised_debug_plan.md  PLANNING_step_7.2.8_delay_imports.md  PLANNING_step_7.2.9_refactor_actor_location.md  TASK.md  cline_task_apr-12-2025_4-33-33-pm.md  docker-compose.yml  docker_ps_output.txt  minimal_worker.py  run_minimal_actor_directly.py  run_worker_wrapper.sh  send_test_message.py  send_test_message_clean_env.py  start_worker_programmatically.py  test_dramatiq_worker.py  test_minimal_worker.py  test_pika_blocking.py  tox.ini
agentkit/: README.md  pyproject.toml
agentkit/src/agentkit/core/: agent.py
agentkit/src/agentkit/core/interfaces/: __init__.py  llm_client.py  long_term_memory.py  memory.py  planner.py  security.py  tool_manager.py
agentkit/src/agentkit/llm_clients/: __init__.py  anthropic_client.py  google_client.py  openai_client.py  openrouter_client.py
agentkit/src/agentkit/memory/: short_term.py
agentkit/src/agentkit/memory/long_term/: chroma_memory.py
agentkit/src/agentkit/planning/: __init__.py  placeholder_planner.py  react_planner.py  simple_planner.py
agentkit/src/agentkit/tests/core/: test_agent.py
agentkit/src/agentkit/tests/llm_clients/: __init__.py  test_anthropic_client.py  test_google_client.py  test_openai_client.py  test_openrouter_client.py
agentkit/src/agentkit/tests/memory/: test_short_term.py
agentkit/src/agentkit/tests/planning/: test_placeholder_planner.py  test_react_planner.py
agentkit/src/agentkit/tools/: __init__.py  execution.py  mcp_proxy.py  registry.py  schemas.py
agentkit/tests/: __init__.py
agentkit/tests/integration/: test_live_llm_clients.py
agentkit/tests/tools/: __init__.py  test_execution.py  test_registry.py  test_schemas.py
ops-core/: README.md  __init__.py  alembic.ini  pyproject.toml
ops-core/alembic/: env.py
ops-core/alembic/versions/: b810512236e1_initial_task_model.py
ops-core/load_tests/: locustfile.py
ops-core/scripts/: fix_grpc_imports.sh
ops-core/src/ops_core/: __init__.py  dependencies.py  main.py
ops-core/src/ops_core/config/: loader.py  mcp_servers.yaml
ops-core/src/ops_core/grpc_internal/: tasks_pb2.py  tasks_pb2_grpc.py
ops-core/src/ops_core/mcp_client/: client.py  proxy_tool.py
ops-core/src/ops_core/metadata/: base.py  sql_store.py  store.py
ops-core/src/ops_core/models/: __init__.py  base.py  tasks.py
ops-core/src/ops_core/proto/: __init__.py  tasks.proto  tasks_pb2.py  tasks_pb2_grpc.py
ops-core/src/ops_core/scheduler/: __init__.py  engine.py
ops-core/src/ops_core/tasks/: broker.py  worker.py
ops-core/tests/: conftest.py  test_dependencies.py  test_main.py
ops-core/tests/config/: test_loader.py
ops-core/tests/grpc/: test_task_servicer.py
ops-core/tests/integration/: test_api_scheduler_integration.py  test_async_workflow.py  test_e2e_workflow.py  test_live_e2e.py
ops-core/tests/mcp_client/: test_client.py
ops-core/tests/metadata/: test_sql_store.py  test_store.py
ops-core/tests/models/: test_tasks.py
ops-core/tests/scheduler/: test_engine.py
ops-core/tests/tasks/: test_broker.py
ops_core/: pyproject.toml  tox.ini
ops_core/ops_core/: dependencies.py  main.py
ops_core/ops_core/api/: __init__.py
ops_core/ops_core/api/v1/: __init__.py
ops_core/ops_core/config/: loader.py  mcp_servers.yaml
ops_core/ops_core/grpc_internal/: __init__.py  task_servicer.py  tasks_pb2_grpc.py
ops_core/ops_core/mcp_client/: __init__.py  client.py  proxy_tool.py
ops_core/ops_core/metadata/: __init__.py  store.py
ops_core/ops_core/models/: __init__.py  tasks.py
ops_core/ops_core/proto/: tasks.proto  tasks_pb2_grpc.py
ops_core/ops_core/scheduler/: engine.py
ops_core/ops_core/tasks/: broker.py  worker.py
ops_core/ops_core/tests/integration/: test_async_workflow.py
ops_core/scripts/: fix_grpc_imports.sh
ops_core/tests/: conftest.py  test_dependencies.py
ops_core/tests/api/: __init__.py
ops_core/tests/api/v1/: __init__.py
ops_core/tests/grpc/: test_task_servicer.py
ops_core/tests/integration/: __init__.py  test_api_scheduler_integration.py  test_async_workflow.py  test_e2e_workflow.py
ops_core/tests/mcp_client/: test_client.py  test_proxy_tool.py
ops_core/tests/metadata/: test_store.py
ops_core/tests/models/: test_tasks.py
ops_core/tests/scheduler/: test_engine.py
ops_core/tests/tasks/: test_broker.py
(+55 files in other folders)
