[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentkit"
version = "0.1.0"
description = "Toolkit for building LLM-powered agents."
# readme = "README.md" # Optional: Add if/when README exists
requires-python = ">=3.8"
dependencies = [
    "pydantic",
    "openai>=1.0.0,<2.0.0", # Added for OpenAI LLM Client
    "anthropic>=0.20.0,<1.0.0", # Added for Anthropic LLM Client
    "google-genai", # Use the new recommended SDK
    "google-api-core>=2.11.0", # Add dependency for exceptions
    # "protobuf==4.25.3", # Removed pin, let new SDK manage dependencies
    "numpy<2.0", # Pin numpy to avoid chromadb incompatibility with np.float_
    "tenacity>=8.0.0,<9.0.0", # Added for retry logic
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    # Add numpy here too if test-specific numpy features are used,
    # but pinning in core dependencies should suffice for the chromadb issue.
]
long_term_memory = [
    "chromadb>=0.4.0,<0.5.0", # Added for ChromaDB LTM
    # Numpy is already pinned in core dependencies
]

[tool.setuptools.packages.find]
# Look for packages inside the 'src' directory relative to this project root
where = ["src"]
# Setuptools should find the 'agentkit' package within the 'src/' directory specified by 'where'

[tool.pytest.ini_options]
# Add asyncio config here proactively to avoid the warning
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live: mark test as live integration test requiring API keys",
]
