[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-core"
version = "0.1.0"
description = "Orchestration engine for Opspawn agents."
readme = "README.md" # Assuming a README might exist or be added later
requires-python = ">=3.8"
# List direct dependencies identified earlier (excluding test tools and agentkit)
dependencies = [
    "pydantic",
    "mcp",
    "anthropic",
    "python-dotenv",
    "PyYAML",
    "fastapi>=0.110.0", # Added for REST API
    "uvicorn[standard]>=0.29.0", # Added for running FastAPI server
    "grpcio==1.62.1", # Pinned for gRPC runtime
    "grpcio-tools==1.62.1", # Pinned for gRPC code generation (match grpcio)
    "dramatiq[rabbitmq]>=1.17.0", # Added for async task queue
]

[tool.setuptools.packages.find]
# Look for packages inside the nested 'ops_core' directory
where = ["ops_core"]
# Setuptools should find the 'ops_core' package within the 'ops_core/' directory specified by 'where'
exclude = ["tests*"] # Exclude the tests directory relative to the root

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
